Make netstat handle -a properly; that is, don't show unconnected listener sockets unless -a was given. (It was checking the local address instead of the remote address for being INADDR_ANY or equivalent.)

PR 38093 from Dieter Roelants; I adjusted the patch a little.

This needs pullups for both -4 and -5.